--- a/src/Smartstore.Web/Views/Menu/OffCanvas.Home.cshtml
+++ b/src/Smartstore.Web/Views/Menu/OffCanvas.Home.cshtml
@@ -13,17 +13,17 @@
 <div class="ocm-home-layer layer" data-id="0" data-depth="0" data-disallow-navigation="@((!allowNavigation).ToString().ToLower())">
     <div class="offcanvas-menu-header offcanvas-tabs" attr-class='(!showTabs, "d-none")'>
         <ul class="nav nav-tabs nav-tabs-line row no-gutters" role="tablist" aria-label="@T("Aria.Label.OffCanvasMenuTab")">
-            <li sm-if="showNodes" class="nav-item col">
+            <li sm-if="showNodes" class="nav-item col" role="none">
                 <a id="ocm-tab-menu" class="nav-link" data-toggle="tab" href="#ocm-menu" data-initialized="true" role="tab" aria-controls="ocm-menu" aria-selected="true" tabindex="0">
                     <span class="title">@T("Offcanvas.Menu.Categories")</span>
                 </a>
             </li>
-            <li sm-if="showBrands" class="nav-item col">
+            <li sm-if="showBrands" class="nav-item col" role="none">
                 <a id="ocm-tab-brands" class="nav-link" data-toggle="tab" href="#ocm-brands" data-url="@Url.Action("OffCanvasBrands", "Menu")" role="tab" aria-controls="ocm-brands" aria-selected="false" tabindex="-1">
                     <span class="title">@T("Offcanvas.Menu.Brands")</span>
                 </a>
             </li>
-            <li class="nav-item col">
+            <li class="nav-item col" role="none">
                 <a id="ocm-tab-service" class="nav-link" data-toggle="tab" href="#ocm-service" role="tab" aria-controls="ocm-service" aria-selected="false" tabindex="-1">
                     <span class="title">@T("Offcanvas.Menu.Service")</span>
                 </a>
