--- a/src/Smartstore.Web/Views/ShoppingCart/EmailWishlist.cshtml
+++ b/src/Smartstore.Web/Views/ShoppingCart/EmailWishlist.cshtml
@@ -9,30 +9,38 @@
 
 <div class="page email-a-friend-page">
     <div class="page-title">
-        <h1>@T("Wishlist.EmailAFriend.Title")</h1>
+        <h1 id="email-a-friend-title">@T("Wishlist.EmailAFriend.Title")</h1>
     </div>
     <div class="page-body">
         @if (Model.SuccessfullySent)
         {
-            <div class="alert alert-success">
+            <div class="alert alert-success" role="alert">
                 @Model.Result
             </div>
         }
         else
         {
-            <form asp-action="EmailWishlist" asp-controller="ShoppingCart" method="post" class="form-horizontal">
+            <form asp-action="EmailWishlist" asp-controller="ShoppingCart" method="post" class="form-horizontal" aria-labelledby="email-a-friend-title">
                 <fieldset>
                     <div asp-validation-summary="ModelOnly" class="message-error"></div>
 
                     <div class="form-group">
                         <label asp-for="FriendEmail" class="col-form-label required"></label>
-                        <input asp-for="FriendEmail" sm-required="true" class="friend-email form-control" placeholder="@T("Wishlist.EmailAFriend.FriendEmail.Hint")" />
+                        <input asp-for="FriendEmail" 
+                               sm-required="true"
+                               autocomplete="email"
+                               class="friend-email form-control" 
+                               placeholder="@T("Wishlist.EmailAFriend.FriendEmail.Hint")" />
                         <span asp-validation-for="FriendEmail"></span>
                     </div>
 
                     <div class="form-group">
                         <label asp-for="YourEmailAddress" class="col-form-label required"></label>
-                        <input asp-for="YourEmailAddress" sm-required="true" class="your-email form-control" placeholder="@T("Wishlist.EmailAFriend.YourEmailAddress.Hint")" />
+                        <input asp-for="YourEmailAddress" 
+                               sm-required="true"
+                               autocomplete="email"
+                               class="your-email form-control" 
+                               placeholder="@T("Wishlist.EmailAFriend.YourEmailAddress.Hint")" />
                         <span asp-validation-for="YourEmailAddress"></span>
                     </div>
 
@@ -55,9 +63,11 @@
                     <input type="hidden" name="send-email" value="send-email">
 
                     <div class="form-group">
-                        <button type="submit" name="send-email" class="btn btn-primary send-email-a-friend-button">@T("Wishlist.EmailAFriend.Button")</button>
+                        <button type="submit" name="send-email" class="btn btn-primary send-email-a-friend-button">
+                            <i class="fa fa-envelope" aria-hidden="true"></i>
+                            <span>@T("Wishlist.EmailAFriend.Button")</span>
+                        </button>
                     </div>
-
                 </fieldset>
             </form>
         }
