--- a/src/Smartstore.Web/Views/Catalog/Partials/OffCanvasCompare.cshtml
+++ b/src/Smartstore.Web/Views/Catalog/Partials/OffCanvasCompare.cshtml
@@ -15,10 +15,10 @@
         </p>
     </div>
 
-    <div sm-if="Model.Items.Count > 0" class="offcanvas-cart-items">
+    <div sm-if="Model.Items.Count > 0" class="offcanvas-cart-items" role="list">
         @foreach (var item in Model.Items)
         {
-            <div class="offcanvas-cart-item">
+            <div class="offcanvas-cart-item" role="listitem">
                 <div class="row sm-gutters">
                     <div class="col col-alpha">
                         @if (item.Image != null && item.Image.HasImage())
