--- a/src/Smartstore.Web/Views/ShoppingCart/Partials/WishlistItems.cshtml
+++ b/src/Smartstore.Web/Views/ShoppingCart/Partials/WishlistItems.cshtml
@@ -13,12 +13,12 @@
 {
     <div class="cart-row">
         <div sm-if="Model.DisplayAddToCart && !Model.IsEditable" class="position-absolute">
-            <input type="checkbox" name="addtocart" class="form-check-input" value="@(item.Id)" />
+            <input type="checkbox" name="addtocart" class="form-check-input" value="@(item.Id)" aria-labelledby="cart-item-link-@item.Id" />
         </div>
 
         <div class="row" role="row">
             @* Image *@
-            <div class="cart-item-img col-3" sm-if="Model.ShowProductImages && item.Image != null && item.Image.HasImage()"  role="cell">
+            <div sm-if="Model.ShowProductImages && item.Image != null && item.Image.HasImage()" class="cart-item-img col-3" role="cell">
                 <img sm-model="item.Image" class="img-fluid" attr-alt='(item.Image.Alt.IsEmpty(), item.ProductName)' />
             </div>
 
