Fixed wrong string resource name

--- a/src/Smartstore.Web/Views/Customer/Avatar.cshtml
+++ b/src/Smartstore.Web/Views/Customer/Avatar.cshtml
@@ -51,7 +51,7 @@
                      style="width: 0%" 
                      aria-valuemin="0" 
                      aria-valuemax="100" 
-                     aria-label="@(currentFile?.Name.NullEmpty() ?? T("Aria.Label.ProgressBar", avatarStr))"></div>
+                     aria-label="@(currentFile?.Name.NullEmpty() ?? T("Aria.Label.UploaderProgressBar", avatarStr))"></div>
             </div>
         </div>
     </div>
