--- a/src/Smartstore.Web/Views/Shared/ChoiceTemplates/Choice.FileUpload.cshtml
+++ b/src/Smartstore.Web/Views/Shared/ChoiceTemplates/Choice.FileUpload.cshtml
@@ -44,7 +44,7 @@
                      style="width: 0%" 
                      aria-valuemin="0" 
                      aria-valuemax="100"
-                     aria-label="@(Model.UploadedFileName.NullEmpty() ?? T("Aria.Label.ProgressBar", Model.Name))"></div>
+                     aria-label="@(Model.UploadedFileName.NullEmpty() ?? T("Aria.Label.UploaderProgressBar", Model.Name))"></div>
             </div>
         </div>
     </div>
