--- a/src/Smartstore.Web/Views/Shared/EditorTemplates/Media.cshtml
+++ b/src/Smartstore.Web/Views/Shared/EditorTemplates/Media.cshtml
@@ -112,7 +112,7 @@
                  style="width: 0%" 
                  aria-valuemin="0" 
                  aria-valuemax="100"
-                 aria-label="@(currentFile?.Name.NullEmpty() ?? T("Aria.Label.ProgressBar", string.Empty))"></div>
+                 aria-label="@(currentFile?.Name.NullEmpty() ?? T("Aria.Label.UploaderProgressBar", string.Empty))"></div>
         </div>
     </div>
 </div>
