WCAG: Made PhotoSwipe accessible to screenreaders

--- a/src/Smartstore.Web/Views/Shared/Partials/PhotoSwipe.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/PhotoSwipe.cshtml
@@ -1,22 +1,22 @@
 ﻿<!-- Root element of PhotoSwipe -->
 <div id="pswp" class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="pswp__bg"></div>
-    <div class="pswp__scroll-wrap">
-        <div class="pswp__container">
-            <div class="pswp__item"></div>
-            <div class="pswp__item"></div>
-            <div class="pswp__item"></div>
+    <section class="pswp__scroll-wrap" aria-roledescription="carousel">
+        <div class="pswp__container" id="pswp__items" aria-live="off">
+            <div class="pswp__item" role="group" aria-roledescription="slide" aria-hidden="true"></div>
+            <div class="pswp__item" role="group" aria-roledescription="slide" aria-hidden="true"></div>
+            <div class="pswp__item" role="group" aria-roledescription="slide" aria-hidden="true"></div>
         </div>
         <div class="pswp__ui pswp__ui--hidden">
             <div class="pswp__top-bar hstack">
                 <div class="pswp__counter badge badge-dark badge-pill mr-2"></div>
                 <div class="pswp__zoom-controls hstack gap-1">
-                    <button type="button" class="reset pswp__button pswp-action pswp__button--fs" title="Toggle fullscreen"></button>
-                    <button type="button" class="reset pswp__button pswp-action pswp__button--zoom" title="Zoom in/out"></button>
+                    <button type="button" class="reset pswp__button pswp-action pswp__button--fs" title="Toggle fullscreen" aria-label="Toggle fullscreen"></button>
+                    <button type="button" class="reset pswp__button pswp-action pswp__button--zoom" title="Zoom in/out" aria-label="Zoom in/out"></button>
                 </div>
                 <!-- Preloader demo http://codepen.io/dimsemenov/pen/yyBWoR -->
                 <!-- element will get class pswp__preloader--active when preloader is running -->
-                <div class="pswp__preloader">
+                <div class="pswp__preloader" aria-hidden="true">
                     <div class="pswp__preloader__icn">
                         <div class="pswp__preloader__cut">
                             <div class="pswp__preloader__donut"></div>
@@ -24,16 +24,16 @@
                     </div>
                 </div>
                 <!-- Close button -->
-                <button type="button" class="reset pswp__button pswp__button--close" title="Close (Esc)">&#215;</button>
+                <button type="button" class="reset pswp__button pswp__button--close" title="Close (ESC)" aria-label="Close">&#215;</button>
             </div>
             @*<div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
                     <div class="pswp__share-tooltip"></div>
                 </div>*@
-            <button type="button" class="reset pswp__button pswp__arrow pswp__button--arrow--left" title="Previous (arrow left)"></button>
-            <button type="button" class="reset pswp__button pswp__arrow pswp__button--arrow--right" title="Next (arrow right)"></button>
+            <button type="button" class="reset pswp__button pswp__arrow pswp__button--arrow--left" title="Previous" aria-label="Previous" aria-controls="pswp__items"></button>
+            <button type="button" class="reset pswp__button pswp__arrow pswp__button--arrow--right" title="Next" aria-label="Next" aria-controls="pswp__items"></button>
             <div class="pswp__caption">
                 <div class="pswp__caption__center"></div>
             </div>
         </div>
-    </div>
+    </section>
 </div>
