--- a/src/Smartstore.Web/Views/Checkout/Partials/ConfirmDetails.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/Partials/ConfirmDetails.cshtml
@@ -84,7 +84,7 @@
             <partial name="CartWarnings" model="cart.Warnings" />
         </div>
         <div id="cart-items" class="cart">
-            <div class="cart-body">
+            <div role="list" class="cart-body">
                 <partial name="CartItems" model="cart" />
             </div>
         </div>
