--- a/src/Smartstore.Web/Views/Shared/Partials/CartItems.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/CartItems.cshtml
@@ -11,22 +11,27 @@
 
 @foreach (var item in Model.Items)
 {
-    <div class="cart-row" attr-class='(!item.Active, "cart-item-inactive")' data-key="@item.Id" data-parent-key="@item.Id" >
-        <div class="row" role="row">
-            <div sm-if="Model.AllowActivatableCartItems && Model.IsEditable" class="select-cart-item col-auto" role="cell">
+    <div role="listitem"
+         aria-labelledby="cart-item-link-@item.Id"
+         class="cart-row" 
+         attr-class='(!item.Active, "cart-item-inactive")' 
+         data-key="@item.Id" 
+         data-parent-key="@item.Id">
+        <div class="row">
+            <div sm-if="Model.AllowActivatableCartItems && Model.IsEditable" class="select-cart-item col-auto">
                 <input name="SelectCartItem@(item.Id)" 
                        type="checkbox" 
                        class="form-check-input select-cart-item-checkbox" 
                        attr-checked='(item.Active, "checked")' 
-                       aria-labelledby="cart-item-link-@(item.Id)" />
+                       aria-labelledby="cart-item-link-@item.Id" />
             </div>
             @* Image *@
-            <div sm-if="Model.ShowProductImages && item.Image != null && item.Image.HasImage()" class="cart-item-img col-3" role="cell">
+            <div sm-if="Model.ShowProductImages && item.Image != null && item.Image.HasImage()" class="cart-item-img col-3">
                 <img sm-model="item.Image" class="img-fluid" attr-alt='(item.Image.Alt.IsEmpty(), item.ProductName)' />
             </div>
 
             @* Data *@
-            <div class="cart-item-data col" role="cell">
+            <div class="cart-item-data col">
                 <partial name="CartItem.Details" model="item" view-data="parentViewData" />
 
                 @* User Agreement & ESD *@
