--- a/src/Smartstore.Web/Views/ShoppingCart/Partials/WishlistItems.cshtml
+++ b/src/Smartstore.Web/Views/ShoppingCart/Partials/WishlistItems.cshtml
@@ -11,19 +11,19 @@
 
 @foreach (var item in Model.Items)
 {
-    <div class="cart-row">
+    <div role="listitem" aria-labelledby="cart-item-link-@item.Id" class="cart-row">
         <div sm-if="Model.DisplayAddToCart && !Model.IsEditable" class="position-absolute">
-            <input type="checkbox" name="addtocart" class="form-check-input" value="@(item.Id)" aria-labelledby="cart-item-link-@item.Id" />
+            <input type="checkbox" name="addtocart" class="form-check-input" value="@item.Id" aria-labelledby="cart-item-link-@item.Id" />
         </div>
 
-        <div class="row" role="row">
+        <div class="row">
             @* Image *@
-            <div sm-if="Model.ShowProductImages && item.Image != null && item.Image.HasImage()" class="cart-item-img col-3" role="cell">
+            <div sm-if="Model.ShowProductImages && item.Image != null && item.Image.HasImage()" class="cart-item-img col-3">
                 <img sm-model="item.Image" class="img-fluid" attr-alt='(item.Image.Alt.IsEmpty(), item.ProductName)' />
             </div>
 
             @* Data *@
-            <div class="cart-item-data col" role="cell">
+            <div class="cart-item-data col">
                 <partial name="CartItem.Details" model="item" view-data="parentViewData" />
 
                 @* Custom zone *@
