--- a/src/Smartstore.Web/Views/Shared/Partials/CartItem.BundleItems.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/CartItem.BundleItems.cshtml
@@ -15,8 +15,9 @@
 @for (var i = 0; i < bundleItems.Length; i++)
 {
     var item = bundleItems[i];
+    var label = @T("Aria.Label.BundleContains", item.ProductName);
     <div role="listitem"
-         aria-label="@T("Aria.Label.BundleContains", item.ProductName)"
+         aria-label="@label"
          class="cart-row cart-row-child"
          attr-class='(!item.Active, "cart-item-inactive")'
          data-key="@item.Id" 
@@ -57,7 +58,11 @@
 
                         @if (item.VisibleIndividually)
                         {
-                            <a class="cart-item-link" href="@item.ProductUrl" title="@T("Products.Details")" sm-language-attributes-for="item.ProductName">
+                            <a class="cart-item-link" 
+                               href="@item.ProductUrl" 
+                               title="@T("Products.Details")"
+                               aria-label="@label"
+                               sm-language-attributes-for="item.ProductName">
                                 @item.ProductName
                             </a>
                         }
