--- a/src/Smartstore.Web/Views/ShoppingCart/Partials/WishlistItems.cshtml
+++ b/src/Smartstore.Web/Views/ShoppingCart/Partials/WishlistItems.cshtml
@@ -51,8 +51,7 @@
                                 data_href = Url.Action("UpdateCartItem", "ShoppingCart", new { cartItemId = item.Id, isCartPage = true }),
                                 data_sci_item = item.Id,
                                 id = $"itemquantity{item.Id}",
-                                name = $"itemquantity{item.Id}",
-                                aria_labelledby = $"cart-item-link-{item.Id}"
+                                name = $"itemquantity{item.Id}"
                             }
                         })
 
