InstantSearch input revamp

--- a/src/Smartstore.Web/Themes/Flex/Views/Shared/ConfigureTheme.cshtml
+++ b/src/Smartstore.Web/Themes/Flex/Views/Shared/ConfigureTheme.cshtml
@@ -156,6 +156,8 @@
                 ThemeVarEditor("searchbox-color-2");
                 ThemeVarEditor("searchbox-border-1");
                 ThemeVarEditor("searchbox-border-2");
+                ThemeVarEditor("searchbox-outline-width");
+                ThemeVarEditor("searchbox-outline-color");
                 ThemeVarEditor("searchbox-border-mobile");
                 ThemeVarEditor("searchbox-hit-tag-color");
 
