--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_search.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_search.scss
@@ -34,16 +34,23 @@ $facet-selection-glyph-color:   darken($success, 10%);
     transition-duration: 0.2s;
     transition-timing-function: cubic-bezier(.4, 0, .2, 1);
 
-    @if ($searchbox-shadow == true) {
-        &:hover, &:focus, &:active {
-            box-shadow: $box-shadow-sm;
-        }
-    }
-
-    &:focus, &:active {
+    &:is(.active) {
         background-color: $searchbox-bg-2;
         border-color: $searchbox-border-2;
         color: $searchbox-color-2;
+    }
+
+    @if ($searchbox-shadow == true) {
+        &:is(#{unquote(":hover, .active")}) {
+            box-shadow: $box-shadow-sm;
+        }
+    }
+    @else {
+        &:is(.active) {
+            outline: $searchbox-outline-width solid $searchbox-outline-color;
+            outline-offset: -1px;
+            border-color: $searchbox-outline-color;
+        }
     }
 
     &::placeholder {
@@ -126,6 +133,12 @@ $facet-selection-glyph-color:   darken($success, 10%);
         border-bottom-left-radius: 0;
         border-bottom-right-radius: 0;
         background-color: $searchbox-bg-2 !important;
+
+        @if ($searchbox-shadow == false) {
+            box-shadow: $box-shadow-sm;
+            outline-width: 0;
+            border-color: $searchbox-border-2;
+        }
     }
 }
 
