--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_variables-configured.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_variables-configured.scss
@@ -76,6 +76,8 @@ $megamenu-rotator-bg: null !default;
 // Search
 $searchbox-pill: null !default;
 $searchbox-shadow: null !default;
+$searchbox-outline-width: null !default;
+$searchbox-outline-color: null !default;
 $searchbox-bg-1: null !default;
 $searchbox-bg-2: null !default;
 $searchbox-bg-mobile: null !default;
