--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_search.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_search.scss
@@ -225,10 +225,7 @@ $facet-selection-glyph-color:   darken($success, 10%);
     text-decoration: none;
     border-radius: var(--border-radius-md);
 
-    &:focus, 
-    &:hover, 
-    &.active, 
-    &.key-hover {
+    &:is(#{unquote(":focus, :hover, .active, .key-hover")}) {
         color: $dropdown-link-hover-color;
         text-decoration: none;
         background-color: $dropdown-link-hover-bg;
@@ -428,8 +425,7 @@ $facet-selection-glyph-color:   darken($success, 10%);
         padding-bottom: 0;
     }
 
-    input[type=checkbox],
-    input[type=radio] {
+    input:is(#{unquote("[type=checkbox], [type=radio]")}) {
         position: absolute;
         clip: rect(0, 0, 0, 0);
     }
